app/assets/stylesheets/pages/_home.scss
// Specific CSS for your home-page

#map {
  height: 600px;
  width: 500px;
  top: 0;
  position: absolute;
  top: 885px;
  left: 911px;
  object-fit: cover;
}

.row {
  flex-wrap: nowrap;
}

.container {
  padding-top: 100px;
  margin-left: 25px;
  margin-right: 80px;
}

#rating {
  margin-top: 30px;
}

.price {
  padding: 20px 10px 30px 10px;
  text-align: center;
}

.infos {
  padding: 0px;
}

.wrapper {
  margin-top: 80px;
}

